--- a/baldor-front/package.json
+++ b/baldor-front/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.3.6"
   },
   "devDependencies": {
+    "@nuxtjs/proxy": "^1.3.3",
     "@nuxtjs/tailwindcss": "^1.0.0"
   }
 }
